# ts-yaml-code-graph

./: .gitignore  CHANGELOG.md  CLI_REFERENCE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GRANULARITY_GUIDE.md  INSTALL.md  LICENSE  LOGIC_KEYWORDS.md  Makefile  OPTIMIZATION_GUIDE.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  VISUALIZER.md  install.sh  package-lock.json  package.json  repomix.config.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
crates/ycg_cli/: Cargo.toml
crates/ycg_cli/src/: main.rs
crates/ycg_core/: Cargo.toml  build.rs
crates/ycg_core/benches/: BENCHMARKS_GUIDE.md  CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  PATH_NOTE.md  QUICK_REFERENCE.md  README.md  analyze_benchmarks.py  benchmark_results.txt  benchmark_summary.md  granularity_benchmarks.rs  run_benchmarks.sh
crates/ycg_core/src/: PARALLEL_EXTRACTION.md  adhoc_format.rs  adhoc_serializer_v2.rs  ast_cache.rs  ast_cache_README.md  config.rs  enricher.rs  errors.rs  framework_filter.rs  lib.rs  logic_extractor.rs  model.rs  signature_extractor.rs  type_abbreviator.rs  validators.rs
crates/ycg_core/tests/: BASELINE_GUIDE.md  README.md  backward_compatibility_test.rs  baseline_generator.rs  granularity_backward_compatibility_test.rs
crates/ycg_core/tests/fixtures/baseline/: IMPLEMENTATION_SUMMARY.md  README.md  nestjs_high_adhoc_default.yaml  nestjs_high_adhoc_signatures.yaml  simple_ts_high_adhoc_default.yaml  simple_ts_high_adhoc_logic.yaml
examples/: ycg.config.full.json  ycg.config.granularity-default.json  ycg.config.granularity-logic.json  ycg.config.granularity-signatures.json  ycg.config.minimal.json  ycg.config.rust.json  ycg.config.typescript.json
examples/nestjs-api-ts/: .gitignore  package-lock.json  package.json  tsconfig.json
examples/nestjs-api-ts/src/: main.ts
examples/nestjs-api-ts/src/auth/: auth.controller.ts  auth.service.ts
examples/nestjs-api-ts/src/shared/guard/: auth.guard.ts
examples/nestjs-api-ts/src/users/: users.controller.ts  users.service.ts
examples/nestjs-api-ts/src/users/dto/: user.dto.ts
examples/simple-ts/: main.ts  tsconfig.json
src/: cli.ts  graph.ts  index.ts  parser.ts  scanner.ts  types.ts  visualizer.ts  yamlSerializer.ts
