[package]
name = "ycg_cli"
version = "0.2.0"
edition = "2024"

[dependencies]
# Importa a lib vizinha pelo caminho relativo
ycg_core = { path = "../ycg_core" }
anyhow = "1.0"
# Adicione o clap com a feature "derive" para usar structs
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
