[package]
name = "ycg_core"
version = "0.1.0"
edition = "2024"

# Dependências que o código usa em tempo de execução
[dependencies]
# Serialização (JSON/YAML)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Tratamento de Erros (Como prometido no plano)
anyhow = "1.0"
thiserror = "1.0"

# Protobuf (Para ler/escrever SCIP)
prost = "0.12"
prost-types = "0.12"

# Tree-sitter (Parsing de código)
tree-sitter = "0.20"
tree-sitter-rust = "0.20"

tree-sitter-typescript = "0.20"
tree-sitter-javascript = "0.20"

# Hashing (Para IDs estáveis)
xxhash-rust = { version = "0.8", features = ["xxh64"] }

tiktoken-rs = "0.5"

# Token Optimization Dependencies
glob = "0.3"        # Glob pattern matching
ignore = "0.4"      # Gitignore file parsing
regex = "1.0"       # Pattern matching for framework detection
lazy_static = "1.4" # Lazy static initialization for regex patterns

# Parallel Processing
rayon = "1.10" # Data parallelism for signature/logic extraction


# Dependências usadas APENAS durante a compilação
[build-dependencies]
prost-build = "0.12" # Compila o .proto para Rust

# Dependências para testes
[dev-dependencies]
tempfile = "3.0" # Temporary files for tests
